--- a/templates/conducteur.phtml
+++ b/templates/conducteur.phtml
@@ -42,13 +42,13 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Modal Header</h4>
+                                        <h4 class="modal-title">Confirmation suppression</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Some text in the modal.</p>
+                                        <p>Etes-vous sûr de supprimer ce conducteur ?</p>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
                                         <a href="/conducteur/delete?id=<?=$conducteur['id_conducteur'];?>" title="supprimer" class="text-body btn btn-primary">Supprimer</a>
                                     </div>
                                 </div>
